<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/upperLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <Button
            android:id="@+id/buttonSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_photo"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@+id/buttonTake"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/buttonTake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_photo"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonSelect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonSelect" />
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:background="@color/sub2_bg"
            android:contentDescription="@string/image"
            app:layout_constraintDimensionRatio="V, 1:1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSelect"
            app:srcCompat="@android:drawable/ic_menu_help"
            tools:ignore="ImageContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline2"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/sub1_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/layout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/bottomLayout">

            <Button
                android:id="@+id/buttonRun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/run_model" />

            <TextView
                android:id="@+id/textViewObject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/label_of_object"
                android:textSize="20sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/sub2_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout1">

            <TextView
                android:id="@+id/textViewFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:textSize="20sp"
                android:textStyle="bold" />
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="60dp"
                android:paddingEnd="60dp">

                <RadioButton
                    android:id="@+id/radioButtonYes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes"
                    android:textColor="#616161"
                    tools:ignore="TextContrastCheck" />
                <RadioButton
                    android:id="@+id/radioButtonNo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no"
                    android:textColor="#616161"
                    tools:ignore="TextContrastCheck" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/save"
            app:layout_constraintEnd_toStartOf="@+id/buttonStatistics"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout2" />

        <Button
            android:id="@+id/buttonStatistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonSave" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>