<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".StatisticsActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"/>

    <Button
        android:id="@+id/buttonCorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="16dp"
        android:text="@string/correctness"
        android:textSize="20sp"
        style="?android:attr/buttonBarButtonStyle"
        app:layout_constraintBottom_toTopOf="@id/buttonShowTrue"
        app:layout_constraintEnd_toStartOf="@id/textViewValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/ratio"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonCorrect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonCorrect" />

    <Button
        android:id="@+id/buttonShowTrue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_true"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonShowFalse"
        app:layout_constraintEnd_toStartOf="@id/buttonShowFalse"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonShowFalse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/show_false"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonShowTrue"
        app:layout_constraintTop_toBottomOf="@id/buttonCorrect" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="6dp"
        android:background="@color/sub1_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline3" />


</androidx.constraintlayout.widget.ConstraintLayout>